policies/workload-isolation-tier-policies/workload-isolation.cartservice.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: workload-isolation.cartservice
  namespace: hipstershop
  labels:
    projectcalico.org/tier: workload-isolation
spec:
  tier: workload-isolation
  order: 100
  selector: app == "cartservice"
  serviceAccountSelector: ''
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == "checkoutservice"
      destination:
        ports:
          - '7070'
    - action: Allow
      protocol: TCP
      source:
        selector: app == "frontend"
      destination:
        ports:
          - '7070'
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: app == "redis-cart"
        ports:
          - '6379'
  types:
    - Ingress
    - Egress
