policies/workload-isolation-tier-policies/workload-isolation.loadgenerator.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: workload-isolation.loadgenerator
  namespace: hipstershop
  labels:
    projectcalico.org/tier: workload-isolation
spec:
  tier: workload-isolation
  order: 100
  selector: app == "loadgenerator" 
  serviceAccountSelector: ''
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: app == "frontend"
        ports:
          - '8080'
  types:
    - Egress
