policies/workload-isolation-tier-policies/workload-isolation.recommendationservice.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: workload-isolation.recommendationservice
  namespace: hipstershop
  labels:
    projectcalico.org/tier: workload-isolation
spec:
  tier: workload-isolation
  order: 100
  selector: app == "recommendationservice"
  serviceAccountSelector: ''
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == "frontend"
      destination:
        ports:
          - '8080'
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: app == "productcatalogservice"
        ports:
          - '3550'
  types:
    - Ingress
    - Egress
